correcting missing color override and fixing tab in package.json (#85)

--- a/media/webviewslim.css
+++ b/media/webviewslim.css
@@ -30,6 +30,10 @@ body {
   color: var(--vscode-editor-foreground);
 }
 
+.content table thead th {
+  color: var(--vscode-editor-foreground);
+}
+
 a {
   color: var (--vscode-textlink-foreground);
 }
